--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,10 @@
     <item name="spinBars">true</item>
     <item name="color">@android:color/white</item>
   </style>
+
+  <style name="viewCustom">
+    <item name="android:layout_width">match_parent</item>
+    <item name="android:layout_height">wrap_content</item>
+
+  </style>
 </resources>
