Se añade función listado por ubicación.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -136,6 +136,24 @@
             app:layout_constraintStart_toEndOf="@+id/ivUserLogin"
             app:layout_constraintTop_toTopOf="@+id/ivUserLogin" />
 
+        <Button
+            android:id="@+id/btnStart"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Start"
+            app:layout_constraintStart_toStartOf="@+id/btnBuscar"
+            app:layout_constraintTop_toBottomOf="@+id/btnBuscar" />
+
+        <Button
+            android:id="@+id/btnStop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Stop"
+            app:layout_constraintEnd_toEndOf="@+id/btnBuscar"
+            app:layout_constraintTop_toBottomOf="@+id/btnBuscar" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
