--- a/app/src/main/res/layout/recycler_view_item_llista_compra.xml
+++ b/app/src/main/res/layout/recycler_view_item_llista_compra.xml
@@ -7,60 +7,74 @@
     android:layout_height="wrap_content">
 
   <androidx.cardview.widget.CardView
-      android:layout_width="0dp"
+      android:layout_width="match_parent"
       android:layout_height="wrap_content"
-      android:layout_margin="4dp"
+      android:layout_marginStart="8dp"
+      android:layout_marginTop="4dp"
+      android:layout_marginEnd="8dp"
+      android:layout_marginBottom="4dp"
       app:cardCornerRadius="10dp"
+      app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
       <TextView
-          android:id="@+id/tvNomMarca"
+          android:id="@+id/tvQuantityLlistaCompra"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp"
+          android:textSize="24sp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintEnd_toEndOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          tools:text="2" />
+
+      <TextView
+          android:id="@+id/tvNomProducteLlistaCompra"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="8dp"
           android:textColor="@android:color/black"
           android:textSize="20sp"
           app:layout_constraintStart_toEndOf="@+id/ivProducteLlistaCompra"
           app:layout_constraintTop_toTopOf="@+id/ivProducteLlistaCompra"
-          tools:text="@tools:sample/full_names" />
+          tools:text="Nom Producte" />
 
       <ImageView
           android:id="@+id/ivProducteLlistaCompra"
           android:layout_width="50dp"
           android:layout_height="50dp"
           android:layout_marginStart="16dp"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginBottom="8dp"
           app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintStart_toEndOf="@+id/ivMarcarComprado"
           app:layout_constraintTop_toTopOf="parent"
           tools:src="@tools:sample/avatars" />
 
       <TextView
-          android:id="@+id/tvProductesMarca"
-          android:layout_width="285dp"
-          android:layout_height="20dp"
-          app:layout_constraintBottom_toBottomOf="@+id/ivProducteLlistaCompra"
-          app:layout_constraintStart_toStartOf="@+id/tvNomMarca"
-          tools:text="@tools:sample/lorem[4:10]" />
-
-      <ImageView
-          android:id="@+id/imageView"
+          android:id="@+id/tvMarcaProducteLlistaCompra"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginEnd="16dp"
-          app:layout_constraintBottom_toBottomOf="parent"
-          app:layout_constraintEnd_toEndOf="parent"
-          app:layout_constraintTop_toTopOf="parent"
-          app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+          app:layout_constraintBottom_toBottomOf="@+id/ivProducteLlistaCompra"
+          app:layout_constraintStart_toStartOf="@+id/tvNomProducteLlistaCompra"
+          tools:text="Marca Producte" />
 
+      <ImageView
+          android:id="@+id/ivMarcarComprado"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          app:layout_constraintBottom_toBottomOf="parent"
+          app:layout_constraintStart_toStartOf="parent"
+          app:layout_constraintTop_toTopOf="parent"
+          app:srcCompat="@drawable/ic_anadir_al_carrito_primary" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
   </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
